# cpp-cross-compilation-example

./: .gitignore  CMakeLists.txt  flake.nix  package.nix
nix/: config-app.nix  config-vm.nix  overlay.nix  package.nix  service.nix
src/: main.cpp
